feat: 现在可以支持多频道切换了～

--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "umi": "^3.5.17"
+    "@ant-design/pro-layout": "^5.0.12",
+    "@umijs/preset-react": "1.x",
+    "@umijs/test": "^3.2.10",
+    "lint-staged": "^10.0.7",
+    "prettier": "^1.19.1",
+    "randomcolor": "^0.6.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "socket.io-client": "^2.3.0",
+    "umi": "^3.2.10",
+    "yorkie": "^2.0.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.5.17",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
-  }
+    "@types/socket.io-client": "^1.4.33"
+  },
+  "__npminstall_done": false
 }
