--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ant-design/pro-layout": "^5.0.12",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.10",
+    "classnames": "^2.5.1",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "randomcolor": "^0.6.2",
